[gd_scene load_steps=4 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]
[ext_resource path="res://GBTileset.tres" type="TileSet" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="RoomDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetect"]
shape = SubResource( 1 )

[node name="PlayerSpawn" type="Sprite" parent="."]

[connection signal="body_entered" from="RoomDetect" to="." method="_on_RoomDetect_body_entered"]
